<resources>
    <string name="app_name">Board Gamer-App</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>

    <string-array name="weekdays">
        <item>Sonntags</item>
        <item>Montags</item>
        <item>Dienstags</item>
        <item>Mittwochs</item>
        <item>Donnerstags</item>
        <item>Freitags</item>
        <item>Samstags</item>

    </string-array>

    <string-array name="intervals">
        <item>7 Tage</item>
        <item>14 Tage</item>
        <item>28 Tage</item>
    </string-array>

    //Buttons
    <string name="btn_new_date">Anstehende Termine</string>
    <string name="btn_dates">Aktuelle Termine (unnötig?)</string>
    <string name="btn_messages">Nachrichten</string>
    <string name="btn_settings">Einstellungen</string>

    <string name="btn_groups">Termine</string>
    <string name="btn_settings_messages">Benachrichtigungen</string>
    <string name="btn_settings_profile">Profil</string>
    <string name="btn_show_groups">Aktuelle Gruppen</string>
    <string name="btn_leave_group">Gruppe verlassen</string>
    <string name="btn_time_select">Uhrzeit wählen</string>
    <string name="btn_group_create">Gruppe erstellen</string>
    <string name="btn_interval">Intervall</string>
    <string name="btn_date">Datum</string>
    <string name="btn_time">Uhrzeit</string>
    <string name="btn_Create_group">Gruppe erstellen</string>
    <string name="btn_next">Nächster Termin</string>
    <string name="btn_settings_refresh">Aktualisieren</string>
    <string name="btn_show_group_member">Gruppenmitglieder</string>

    //Switches
    <string name="switch_push_notification">Push-Benachrichtigungen</string>
    <string name="switch_mail_notification">E-Mail-Benachrichtigungen</string>

    //Plain Text
    <string name="text_welcome">Willkommen in der Board-Gamer App für deinen perfekten Spieleabend!</string>
    <string name="text_setting_username">Benutzername</string>
    <string name="text_setting_mail">E-Mail-Adresse</string>
    <string name="text_date_plain">Uhrzeit</string>
    <string name="text_date_time_plain">Datum</string>
    <string name="text_title_Create_Group">Zum Erstelllen einer neuen Gruppe, bitte Wochentag, Rhythmus und Uhrzeit wählen</string>
    <string name="title_activity_confirm">Bestätigen</string>
    <string name="text_login_title">Willkommen</string>
    <string name="login_mail">E-Mail-Adresse</string>
    <string name="login_password">Passwort</string>
    <string name="btn_login">Login</string>
    <string name="txt_link_register">Kein Konto? hier registrieren!</string>
    <string name="btn_register">Registrieren</string>
    <string name="text_isMemberSince">Mitglied seit:</string>
    <string name="text_username">Benutzername</string>
    <string name="text_settings_group_warning">Beim Aktualisieren werden die zukünftigen Termine ebenfalls aktualisiert. Dies führt zu Verlusten bei den bereits getätigten Spielevorschlägen! Vergangene Termine sind davon nicht betroffen.</string>
    <string name="hinweis">Hinweis:</string>
    <string name="wochentag">Wochentag:</string>
    <string name="gruppeneinstellungen_aktualisieren">Termineinstellungen aktualisieren</string>
    <string name="uhrzeit">Uhrzeit:</string>
    <string name="Text_uhrzeit">Uhrzeit</string>
    <string name="w_hle_ein_spiel_aus">Wähle ein Spiel aus</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="vorschlagen">Vorschlagen</string>
    <string name="vergangene_termine">Vergangene Termine bewerten</string>
    <string name="benutzername">Benutzername</string>
    <string name="nachricht_erstellen">Nachricht erstellen</string>
    <string name="textview">TextView</string>
    <string name="wie_hat_dir_dieser_spieleabend_gefallen">Wie hat dir dieser Spieleabend gefallen?</string>
    <string name="gastgeber">Gastgeber:</string>
    <string name="essen">Essen:</string>
    <string name="abend_allgemein">Abend allgemein:</string>
    <string name="bewertung_einreichen">Bewertung einreichen</string>
    <string name="ausloggen">Ausloggen</string>
    <string name="id">ID</string>
    <string name="gruppenstatus">Gruppenstatus</string>
    <string name="admin">Admin</string>


</resources>
