<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="303dp"
        android:layout_height="623dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_welcome" />

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="#63FF0000"
            android:text="@string/btn_next" />

        <Button
            android:id="@+id/button2"
            style="@android:style/Widget.DeviceDefault.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_new_date"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickNachrichten"
            android:text="@string/btn_messages" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickEinstellungen"
            android:text="@string/btn_settings" />

        <TextView
            android:id="@+id/textViewCondition"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="Sunny" />

        <Button
            android:id="@+id/buttonSunny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sunny" />

        <Button
            android:id="@+id/buttonFoggy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="foggy" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCreateGroup"
        android:layout_width="181dp"
        android:layout_height="63dp"
        android:layout_marginBottom="28dp"
        android:onClick="onClickGruppenErstellung"
        android:text="@string/btn_Create_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>