<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="270dp"
        android:layout_height="31dp"
        android:layout_marginBottom="28dp"
        android:text="@string/w_hle_ein_spiel_aus"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerGames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerGames"
        android:layout_width="339dp"
        android:layout_height="36dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/abbrechen"
        android:textAlignment="center"
        android:textColor="@color/light_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGames" />

    <TextView
        android:id="@+id/textDialogOk"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/vorschlagen"
        android:textAlignment="center"
        android:textColor="@color/light_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGames" />

</androidx.constraintlayout.widget.ConstraintLayout>